# python-agents-examples

./: .gitignore  README.md  check_agent_example_coverage.py  requirements.txt
basics/: change_agent_instructions.py  context_variables.py  echo_transcriber_agent.py  exit_message.py  interrupts_user.py  listen_and_respond.py  playing_audio.py  repeater.py  uninterruptable.py
egress/: recording_agent.py
evaluating-agents/: README.md  agent_evals.py  agent_to_test.py  dispatch_agents.md  requirements.txt
events/: basic_event.py  event_emitters.py
flows/: README.md  declarative_flow.py  multi_stage_flow.py  simple_flow.py
hardware/: pi_zero_transcriber.py
home_assistant/: README.md  homeautomation.py
mcp/: agent.py  server.py
mcp/livekit-mcp-server/: README.md  pyproject.toml  server.py
metrics/: metrics_llm.py  metrics_stt.py  metrics_tts.py  metrics_vad.py
multi-agent/: long_or_short_agent.py
pipeline-llm/: anthropic_llm.py  cerebras_llm.py  google_llm.py  interrupt_user.py  large_context.py  llm_powered_content_filter.py  ollama_llm.py  openai_llm.py  replacing_llm_output.py  simple_content_filter.py  transcription_node.py
pipeline-stt/: diarization.py  keyword_detection.py  transcriber.py
pipeline-tts/: cartesia_tts.py  elevenlabs_change_language.py  elevenlabs_tts.py  only_greet.py  openai_tts.py  playai_tts.py  rime_tts.py  short_replies_only.py  tts_comparison.py  tts_node.py
rag/: README.md  build_rag_data.py  main.py  rag_db_builder.py  rag_enriched_agent.py  rag_handler.py  raw_data.txt  requirements.txt  scrape_docs.py
(+231 files in other folders)
